--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@
 
     // 初期起動
     renderWords();
+
+
+
+
+
+// サービスワーカーの登録
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./sw.js')
+      .then(reg => console.log('Service Worker registered!'))
+      .catch(err => console.error('Service Worker registration failed:', err));
+  });
+}
+
   </script>
 </body>
 </html>
